--- a/internal/templates/layout.templ
+++ b/internal/templates/layout.templ
@@ -65,7 +65,7 @@ templ nav() {
 
 templ Layout(contents templ.Component, title string) {
   @header(title)
-  <body class="bg-background text-text flex flex-col min-h-screen scrollbar-thin scrollbar-thumb-gray-600 scrollbar-track-gray-800 hover:scrollbar-thumb-gray-500">
+  <body class="bg-background text-text flex flex-col min-h-screen">
     @nav()
 
     <main class="flex-1 container mx-auto p-4">
