--- a/static/css/input.css
+++ b/static/css/input.css
@@ -2,3 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* Default dark custom scrollbar styles */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2d2d2d; /* Dark background for track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #4a4a4a; /* Dark gray thumb */
+  border-radius: 6px;
+  border: 3px solid #2d2d2d; /* Match the track color */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #606060; /* Slightly lighter thumb on hover */
+}
