--- a/static/css/weekly.css
+++ b/static/css/weekly.css
@@ -143,8 +143,9 @@
   font-weight: 700;
   font-size: 3rem;
   color: #fff;
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  text-shadow: 0 2px 10px rgba(255, 255, 255, 0.5);
   font-style: italic;
+  
 }
 
 @media (min-width: 768px) {
